--- a/src/components/MainPAge/MainPAge.css
+++ b/src/components/MainPAge/MainPAge.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   min-height: 100%;
   gap: 1rem;
-  /* box-shadow: 0 2px 7px rgba(248, 248, 248, 0.25); */
+  box-shadow: 0 2px 7px rgba(248, 248, 248, 0.25);
 }
 .jcCenter {
   justify-content: center;
